add py file to search biorxiv

--- a/paperscraper/testfile.ipynb
+++ b/paperscraper/testfile.ipynb
@@ -20,8 +20,18 @@
     "from typing import List, Union\n",
     "from paperscraper.pubmed import get_query_from_keywords_and_date\n",
     "from paperscraper.pubmed import get_pubmed_papers\n",
-    "def get_and_dump_pubmed_papers(\n",
-    "    keywords: List[Union[str, List[str]]],\n",
+    "\n",
+    "\n",
+    "def search_pubmed_papers(\n",
+    "    keywords: List[Union[str, List[str]]]\n",
+    "    = [['SARS-CoV-2', 'COVID-19', 'coronavirus', 'SARS-CoV', 'MERS-CoV',\n",
+    "        'SARS'],\n",
+    "        ['antibody', 'antibodies', 'nanobody', 'immunoglobulin', 'MAb',\n",
+    "         'nanobodies'],\n",
+    "        ['neutralizing', 'neutralize', 'neutralization', 'bind', 'binding',\n",
+    "         'inhibit', 'targeting'],\n",
+    "        ['heavy chain', 'complementarity determining region', 'gene',\n",
+    "         'epitope', 'receptor-binding domain', 'rbd', 'spike protein', 'VHH']],\n",
     "    fields: List = [\"title\", \"authors\", \"date\", \"abstract\", \"journal\", \"doi\"],\n",
     "    start_date: str = \"None\",\n",
     "    end_date: str = \"None\",\n",
@@ -30,17 +40,21 @@
     "):\n",
     "    \"\"\"\n",
     "    Combines get_pubmed_papers and dump_papers.\n",
+    "    For default setting, just import this function and use\n",
+    "    search_pubmed_papers()\n",
+    "    Returns:\n",
+    "        A list of dictionaries, each containing the paper's\n",
+    "         [\"title\", \"authors\", \"date\", \"abstract\", \"journal\", \"doi\"]\n",
     "\n",
     "    Args:\n",
     "        keywords (List[Union[str, List[str]]]): List of keywords to request\n",
     "            pubmed API. The outer list level will be considered as AND\n",
     "            separated keys, the inner level as OR separated.\n",
-    "        filepath (str): Path where the dump will be saved.\n",
     "        fields (List, optional): List of strings with fields to keep in output.\n",
     "            Defaults to ['title', 'authors', 'date', 'abstract',\n",
     "            'journal', 'doi'].\n",
-    "            NOTE: If 'emails' is passed, an attempt is made to extract author mail\n",
-    "            addresses.\n",
+    "            NOTE: If 'emails' is passed, an attempt is made to extract author\n",
+    "            mail addresses.\n",
     "        start_date (str): Start date for the search. Needs to be in format:\n",
     "            YYYY/MM/DD, e.g. '2020/07/20'. Defaults to 'None', i.e. no specific\n",
     "            dates are used.\n",
@@ -53,6 +67,7 @@
     "    papers = get_pubmed_papers(query, fields, *args, **kwargs)\n",
     "    return papers\n",
     "\n",
+    "\n",
     "def dump_papers(papers, filepath: str) -> None:\n",
     "    \"\"\"\n",
     "    Receives a list of dicts, one dict per paper and dumps it into a .jsonl\n",
@@ -64,7 +79,91 @@
     "\n",
     "    with open(filepath, \"w\") as f:\n",
     "        for paper in papers:\n",
-    "            f.write(str(paper) + \"\\n\")\n"
+    "            f.write(str(paper) + \"\\n\")\n",
+    "\n",
+    "\n",
+    "def pubmed_papers_and_pt(\n",
+    "    keywords: List[Union[str, List[str]]]\n",
+    "    = [['SARS-CoV-2', 'COVID-19', 'coronavirus', 'SARS-CoV', 'MERS-CoV',\n",
+    "        'SARS'],\n",
+    "        ['antibody', 'antibodies', 'nanobody', 'immunoglobulin',\n",
+    "         'nanobodies'],\n",
+    "        ['neutralizing', 'neutralize', 'neutralization', 'bind', 'binding',\n",
+    "         'inhibit', 'targeting', 'neutralising', 'neutralise', 'neutralisation'],\n",
+    "        ['heavy chain', 'complementarity determining region', 'gene',\n",
+    "         'epitope', 'receptor', 'rbd', 'spike protein', 'VHH', 'domain']],\n",
+    "    fields: List = [\"title\", \"authors\", \"date\", \"abstract\", \"journal\", \"doi\"],\n",
+    "    start_date: str = \"None\",\n",
+    "    end_date: str = \"None\",\n",
+    "    txt: bool = False,\n",
+    "    jsonl: bool = False,\n",
+    "    *args,\n",
+    "    **kwargs\n",
+    "):\n",
+    "    \"\"\"\n",
+    "    Search for papers and preprints on PubMed\n",
+    "    Returns:\n",
+    "        A list of dictionaries, each containing the paper's\n",
+    "         [\"title\", \"authors\", \"date\", \"abstract\", \"journal\", \"doi\"]\n",
+    "        AND/OR files containing relevant information\n",
+    "\n",
+    "    Args:\n",
+    "        keywords (List[Union[str, List[str]]],optional): List of keywords to\n",
+    "            request pubmed API. The outer list level will be considered as AND\n",
+    "            separated keys, the inner level as OR separated.\n",
+    "        fields (List, optional): List of strings with fields to keep in output.\n",
+    "            Defaults to ['title', 'authors', 'date', 'abstract',\n",
+    "            'journal', 'doi'].\n",
+    "            NOTE: If 'emails' is passed, an attempt is made to extract author\n",
+    "            mail addresses.\n",
+    "        start_date (str): Start date for the search. Needs to be in format:\n",
+    "            YYYY/MM/DD, e.g. '2020/07/20'. Defaults to 'None', i.e. no specific\n",
+    "            dates are used.\n",
+    "        end_date (str): End date for the search. Same notation as start_date.\n",
+    "    \"\"\"\n",
+    "    papers = search_pubmed_papers(keywords, fields, start_date, end_date,\n",
+    "                                  *args, **kwargs)\n",
+    "    papers_pt = search_pubmed_papers(keywords+['AND preprint[pt]'],\n",
+    "                                     fields, start_date, end_date, *args,\n",
+    "                                     **kwargs)\n",
+    "    output = papers+papers_pt\n",
+    "    list_of_titles = []\n",
+    "    list_of_doi = []\n",
+    "    for _ in output:\n",
+    "        list_of_titles.append(_[\"title\"])\n",
+    "        if _[\"doi\"] is not None:\n",
+    "            doi = _[\"doi\"].split(\"\\n\")[0]\n",
+    "            if doi not in list_of_doi:\n",
+    "                list_of_doi.append(doi)\n",
+    "    if txt is True:\n",
+    "        with open('pubmed_results.txt', \"w\") as f:\n",
+    "            for t in list_of_titles:\n",
+    "                t = t.replace('[', '')\n",
+    "                t = t.replace(']', '')\n",
+    "                f.write(str(t) + \"\\n\")\n",
+    "        with open('dois.txt', \"w\") as f:\n",
+    "            for doi in list_of_doi:\n",
+    "                f.write('https://doi.org/'+str(doi) + \"\\n\")\n",
+    "    if jsonl is True:\n",
+    "        with open('pubmed_results.jsonl', \"w\") as f:\n",
+    "            for paper in output:\n",
+    "                f.write(str(paper) + \"\\n\")\n",
+    "    return output\n",
+    "\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    # These are the keywords that are able to retrieve the most the papers in\n",
+    "    # covabdab\n",
+    "    covid = ['SARS-CoV-2', 'COVID-19', 'coronavirus', 'SARS-CoV', 'MERS-CoV',\n",
+    "             'SARS']\n",
+    "    antibody = ['antibody', 'antibodies', 'nanobody', 'MAb', 'immunoglobulin',\n",
+    "                'nanobodies']\n",
+    "    interaction = ['neutralizing', 'neutralize', 'neutralization', 'bind',\n",
+    "                   'binding', 'inhibit', 'targeting']\n",
+    "    extra = ['heavy chain',  'complementarity determining region',\n",
+    "             'gene', 'epitope', 'receptor-binding domain', 'rbd',\n",
+    "             'spike protein', 'VHH']\n",
+    "    papers_and_preprints = pubmed_papers_and_pt(txt=True, jsonl=True)\n"
    ]
   },
   {
@@ -74,12 +173,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "covid = ['SARS-CoV-2','COVID-19','coronavirus','SARS-CoV','MERS-CoV','SARS']\n",
-    "antibody = ['antibody','antibodies','nanobody','MAb','immunoglobulin','nanobodies']\n",
-    "neut = ['neutralizing', 'neutralize', 'neutralization', 'bind', 'binding',\n",
-    "            'inhibit', 'targeting']\n",
-    "structure = ['heavy chain',  'complementarity determining region',\n",
-    "             'gene','epitope','receptor-binding domain','rbd','spike protein','VHH']\n",
+    "keywords = [['SARS-CoV-2', 'COVID-19', 'coronavirus', 'SARS-CoV', 'MERS-CoV',\n",
+    "        'SARS'],\n",
+    "        ['antibody', 'antibodies', 'nanobody', 'immunoglobulin',\n",
+    "         'nanobodies'],\n",
+    "        ['neutralizing', 'neutralize', 'neutralization', 'bind', 'binding',\n",
+    "         'inhibit', 'targeting', 'neutralising', 'neutralise', 'neutralisation'],\n",
+    "        ['heavy chain', 'complementarity determining region', 'gene',\n",
+    "         'epitope', 'receptor', 'rbd', 'spike protein', 'VHH', 'domain']]\n",
     "#papers = get_and_dump_pubmed_papers([covid,antibody,neut,structure])\n",
     "\n",
     "papers = get_and_dump_pubmed_papers([covid,\n",
