add another doi

--- a/paperscraper/check_coverage.ipynb
+++ b/paperscraper/check_coverage.ipynb
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "7bcb9bc5",
    "metadata": {},
    "outputs": [
@@ -82,7 +82,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<title>A dominant antigenic epitope on SARS-CoV spike protein identified by an avian single-chain variable fragment (scFv)-expressing phage - ScienceDirect</title>\n"
+      "<title>Antibody affinity maturation and cross-variant activity following SARS-CoV-2 mRNA vaccination: Impact of prior exposure and sex</title>\n"
      ]
     }
    ],
@@ -90,7 +90,7 @@
     "from bs4 import BeautifulSoup\n",
     "import requests\n",
     "headers = {'User-Agent': 'Mozilla/5.0 (Windows NT 6.1; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/56.0.2924.76 Safari/537.36'}\n",
-    "page = requests.get(\"https://www.sciencedirect.com/science/article/pii/S0165242707000487\", headers = headers)\n",
+    "page = requests.get(\"https://www.ncbi.nlm.nih.gov/pmc/articles/doi/10.1016/j.ebiom.2021.103748\", headers = headers)\n",
     "soup = BeautifulSoup(page.content, 'html.parser')\n",
     "print(soup.title)\n"
    ]
