aditional keyword combinations

--- a/genbank/mine_genbank.ipynb
+++ b/genbank/mine_genbank.ipynb
@@ -46,14 +46,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "number of entries: 8979\n"
+      "number of entries: 8030\n"
      ]
     }
    ],
@@ -61,7 +61,7 @@
     "# perform keyword search\n",
     "\n",
     "# specify the terms used for the search\n",
-    "search = '((Immunoglobulin[All Fields] OR antibody[All Fields] OR antibodies[All Fields] OR nanobody[All Fields] OR nanobodies[All Fields]) AND (COVID-19[All Fields] OR coronavirus[All Fields] OR Sars-Cov[All Fields] OR Mers-Cov[All Fields] OR SARS[All Fields] OR Sars-CoV-2[All Fields]) AND (neutralizing[All Fields] OR neutralize[All Fields] OR neutralisation[All Fields] OR bind[All Fields] OR inhibit[All Fields] OR anti-Sars-Cov-2[All Fields]))'\n",
+    "search = '((Immunoglobulin OR antibody OR antibodies OR nanobody OR nanobodies) AND (COVID-19 OR coronavirus OR Sars-Cov OR Mers-Cov OR SARS OR Sars-CoV-2) AND (heavy chain OR light chain OR FAB OR fragment antigen binding OR variable domain))'\n",
     "\n",
     "# search protein data base with keywords and find out how many entries are found\n",
     "handle = Entrez.esearch(db='protein', term=search, retmax='2')\n",
@@ -72,31 +72,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/8x/40q8fgwd2wg9ptnzw_b8cl480000gn/T/ipykernel_2247/1416774354.py:16: NumbaWarning: \n",
+      "/var/folders/8x/40q8fgwd2wg9ptnzw_b8cl480000gn/T/ipykernel_6895/1416774354.py:16: NumbaWarning: \n",
       "Compilation is falling back to object mode WITH looplifting enabled because Function \"search_in_covabdab\" failed type inference due to: non-precise type array(pyobject, 1d, C)\n",
-      "During: typing of argument at /var/folders/8x/40q8fgwd2wg9ptnzw_b8cl480000gn/T/ipykernel_2247/1416774354.py (19)\n",
+      "During: typing of argument at /var/folders/8x/40q8fgwd2wg9ptnzw_b8cl480000gn/T/ipykernel_6895/1416774354.py (19)\n",
       "\n",
-      "File \"../../../../../../../../var/folders/8x/40q8fgwd2wg9ptnzw_b8cl480000gn/T/ipykernel_2247/1416774354.py\", line 19:\n",
+      "File \"../../../../../../../../var/folders/8x/40q8fgwd2wg9ptnzw_b8cl480000gn/T/ipykernel_6895/1416774354.py\", line 19:\n",
       "<source missing, REPL/exec in use?>\n",
       "\n",
       "  @jit\n",
-      "/var/folders/8x/40q8fgwd2wg9ptnzw_b8cl480000gn/T/ipykernel_2247/1416774354.py:16: NumbaWarning: \n",
+      "/var/folders/8x/40q8fgwd2wg9ptnzw_b8cl480000gn/T/ipykernel_6895/1416774354.py:16: NumbaWarning: \n",
       "Compilation is falling back to object mode WITHOUT looplifting enabled because Function \"search_in_covabdab\" failed type inference due to: Cannot determine Numba type of <class 'numba.core.dispatcher.LiftedLoop'>\n",
       "\n",
-      "File \"../../../../../../../../var/folders/8x/40q8fgwd2wg9ptnzw_b8cl480000gn/T/ipykernel_2247/1416774354.py\", line 22:\n",
+      "File \"../../../../../../../../var/folders/8x/40q8fgwd2wg9ptnzw_b8cl480000gn/T/ipykernel_6895/1416774354.py\", line 22:\n",
       "<source missing, REPL/exec in use?>\n",
       "\n",
       "  @jit\n",
       "/Users/fabian/miniconda3/envs/auto-db-pipeline/lib/python3.9/site-packages/numba/core/object_mode_passes.py:151: NumbaWarning: Function \"search_in_covabdab\" was compiled in object mode without forceobj=True, but has lifted loops.\n",
       "\n",
-      "File \"../../../../../../../../var/folders/8x/40q8fgwd2wg9ptnzw_b8cl480000gn/T/ipykernel_2247/1416774354.py\", line 19:\n",
+      "File \"../../../../../../../../var/folders/8x/40q8fgwd2wg9ptnzw_b8cl480000gn/T/ipykernel_6895/1416774354.py\", line 19:\n",
       "<source missing, REPL/exec in use?>\n",
       "\n",
       "  warnings.warn(errors.NumbaWarning(warn_msg,\n",
@@ -105,21 +105,21 @@
       "\n",
       "For more information visit https://numba.pydata.org/numba-doc/latest/reference/deprecation.html#deprecation-of-object-mode-fall-back-behaviour-when-using-jit\n",
       "\n",
-      "File \"../../../../../../../../var/folders/8x/40q8fgwd2wg9ptnzw_b8cl480000gn/T/ipykernel_2247/1416774354.py\", line 19:\n",
+      "File \"../../../../../../../../var/folders/8x/40q8fgwd2wg9ptnzw_b8cl480000gn/T/ipykernel_6895/1416774354.py\", line 19:\n",
       "<source missing, REPL/exec in use?>\n",
       "\n",
       "  warnings.warn(errors.NumbaDeprecationWarning(msg,\n",
-      "/var/folders/8x/40q8fgwd2wg9ptnzw_b8cl480000gn/T/ipykernel_2247/1416774354.py:16: NumbaWarning: \n",
+      "/var/folders/8x/40q8fgwd2wg9ptnzw_b8cl480000gn/T/ipykernel_6895/1416774354.py:16: NumbaWarning: \n",
       "Compilation is falling back to object mode WITHOUT looplifting enabled because Function \"search_in_covabdab\" failed type inference due to: non-precise type array(pyobject, 1d, C)\n",
-      "During: typing of argument at /var/folders/8x/40q8fgwd2wg9ptnzw_b8cl480000gn/T/ipykernel_2247/1416774354.py (22)\n",
+      "During: typing of argument at /var/folders/8x/40q8fgwd2wg9ptnzw_b8cl480000gn/T/ipykernel_6895/1416774354.py (22)\n",
       "\n",
-      "File \"../../../../../../../../var/folders/8x/40q8fgwd2wg9ptnzw_b8cl480000gn/T/ipykernel_2247/1416774354.py\", line 22:\n",
+      "File \"../../../../../../../../var/folders/8x/40q8fgwd2wg9ptnzw_b8cl480000gn/T/ipykernel_6895/1416774354.py\", line 22:\n",
       "<source missing, REPL/exec in use?>\n",
       "\n",
       "  @jit\n",
       "/Users/fabian/miniconda3/envs/auto-db-pipeline/lib/python3.9/site-packages/numba/core/object_mode_passes.py:151: NumbaWarning: Function \"search_in_covabdab\" was compiled in object mode without forceobj=True.\n",
       "\n",
-      "File \"../../../../../../../../var/folders/8x/40q8fgwd2wg9ptnzw_b8cl480000gn/T/ipykernel_2247/1416774354.py\", line 22:\n",
+      "File \"../../../../../../../../var/folders/8x/40q8fgwd2wg9ptnzw_b8cl480000gn/T/ipykernel_6895/1416774354.py\", line 22:\n",
       "<source missing, REPL/exec in use?>\n",
       "\n",
       "  warnings.warn(errors.NumbaWarning(warn_msg,\n",
@@ -128,7 +128,7 @@
       "\n",
       "For more information visit https://numba.pydata.org/numba-doc/latest/reference/deprecation.html#deprecation-of-object-mode-fall-back-behaviour-when-using-jit\n",
       "\n",
-      "File \"../../../../../../../../var/folders/8x/40q8fgwd2wg9ptnzw_b8cl480000gn/T/ipykernel_2247/1416774354.py\", line 22:\n",
+      "File \"../../../../../../../../var/folders/8x/40q8fgwd2wg9ptnzw_b8cl480000gn/T/ipykernel_6895/1416774354.py\", line 22:\n",
       "<source missing, REPL/exec in use?>\n",
       "\n",
       "  warnings.warn(errors.NumbaDeprecationWarning(msg,\n"
@@ -138,21 +138,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "total sequences assessed: 8979\n",
-      "number of genbank sequences not in covab dab: 4755\n",
-      "number of genbank sequences found in covab dab: 4224\n",
-      "match rate: 0.4704310056799198\n",
-      "number of genebank sequences that have multiple matches in covab dab: 917.0\n",
-      "number of genebank entries with non unique match in covab dab: 1472\n",
+      "total sequences assessed: 8030\n",
+      "number of genbank sequences not in covab dab: 3936\n",
+      "number of genbank sequences found in covab dab: 4094\n",
+      "match rate: 0.5098381070983811\n",
+      "number of genebank sequences that have multiple matches in covab dab: 1254.0\n",
+      "number of genebank entries with non unique match in covab dab: 1078\n",
       "-------------\n",
       "total sequences in covab dab: 4198\n",
-      "number of Covab Dab VH sequences found: 1367\n",
-      "number of Covab Dab VL sequences found: 1385\n",
-      "number of Covab Dab VH VL pairings found: 1276\n",
-      "number of Covab Dab entires where either VH or VL was found: 1476\n",
+      "number of Covab Dab VH sequences found: 1489\n",
+      "number of Covab Dab VL sequences found: 1527\n",
+      "number of Covab Dab VH VL pairings found: 1397\n",
+      "number of Covab Dab entires where either VH or VL was found: 1619\n",
       "-------------\n",
-      "percentage of covab dab entries with pairing found: 30.395426393520726\n",
-      "percentage of covab dab entries with either VL or VH found: 35.15959980943306\n"
+      "percentage of covab dab entries with pairing found: 33.27775131014769\n",
+      "percentage of covab dab entries with either VL or VH found: 38.56598380181039\n"
      ]
     }
    ],
@@ -709,6 +709,7 @@
    "metadata": {},
    "source": [
     "## Next tasks\n",
+    "0. run search with very vague key words to find what the limit of sequences is that we can find in genbank (expect ~40%)\n",
     "1. optimise keywords to find more sequences\n",
     "2. look at proteins found in genbank that are not in covab dab, are these false positives or relevant antibodies missing from covab dab\n",
     "3. find a way to combine heavy and light chain sequnce\n",
