--- a/combine/draft.ipynb
+++ b/combine/draft.ipynb
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -389,7 +389,7 @@
     "    def get_pdbs(self, verbose=True):\n",
     "        if self.url_doi:\n",
     "            if verbose:\n",
-    "                print(\"Retrieving pdbs from DOI...\")\n",
+    "                print(\"Retrieving PDBs from DOI...\")\n",
     "            doi_poss_pdbs = gp.get_poss_pdbs(self.url_doi)\n",
     "            self.doi_actual_pdbs = checker.get_actual(doi_poss_pdbs)\n",
     "            if verbose:\n",
@@ -398,7 +398,7 @@
     "\n",
     "        if self.url_pmid:\n",
     "            if verbose:\n",
-    "                print(\"Retrieving pdbs from PMC...\")\n",
+    "                print(\"Retrieving PDBs from PMID...\")\n",
     "            pmid_poss_pdbs = gp.get_poss_pdbs(self.url_pmid)\n",
     "            self.pmid_actual_pdbs = checker.get_actual(pmid_poss_pdbs)\n",
     "            if verbose:\n",
@@ -407,7 +407,7 @@
     "        \n",
     "        if self.url_pmc:\n",
     "            if verbose:\n",
-    "                print(\"Retrieving pdbs from PMC...\")\n",
+    "                print(\"Retrieving PDBs from PMC...\")\n",
     "            pmc_poss_pdbs = gp.get_poss_pdbs(self.url_pmc)\n",
     "            self.pmc_actual_pdbs = checker.get_actual(pmc_poss_pdbs)\n",
     "            if verbose:\n",
@@ -522,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -531,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -540,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -554,7 +554,7 @@
        " 'doi': '10.1159/000521436'}"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -565,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -587,12 +587,12 @@
       "DOI: 10.1159/000521436\n",
       "PMID: 34915475\n",
       "PMC: None\n",
-      "Retrieving pdbs from DOI...\n",
-      "Out of the 0 possible PDB IDs scraped 11 are actual PDB IDs.\n",
+      "Retrieving PDBs from DOI...\n",
+      "Out of the 11 possible PDB IDs scraped 0 are actual PDB IDs.\n",
       "[]\n",
       "\n",
-      "Retrieving pdbs from PMC...\n",
-      "Out of the 14 possible PDB IDs scraped 69 are actual PDB IDs.\n",
+      "Retrieving PDBs from PMID...\n",
+      "Out of the 69 possible PDB IDs scraped 14 are actual PDB IDs.\n",
       "['1A14', '1A23', '1C10', '1ZM9', '2H16', '3A19', '3A79', '3D38', '4F7D', '5A39', '5C12', '5C51', '5H16', '5H21']\n",
       "\n"
      ]
@@ -604,7 +604,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'https://pubmed.ncbi.nlm.nih.gov/34915409/'"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "paper.url_pmid"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'title': 'Immunofluorescence studies on the expression of the SARS-CoV-2 receptors in human term placenta.',\n",
+       " 'authors': 'JürgenBecker-DannyQiu-WalterBaron-JörgWilting',\n",
+       " 'date': '2021-12-17',\n",
+       " 'abstract': 'Until September 2021, the Severe Acute Respiratory Syndrome Coronavirus-2 (SARS-CoV-2; COVID-19) pandemic caused over 217 million infections and over 4.5 million deaths. In pregnant women the risk factors for the need of intensive care treatment are generally the same as in the overall population. Of note, COVID-19+ women deliver earlier than COVID-19- women, and the risk for severe neonatal and perinatal morbidity and mortality is significantly higher. The probability and pathways of vertical transmission of the virus from the pregnant woman to the fetus are highly controversial. Recent data have shown that 54 (13%) of 416 neonates born to COVID-19-positive women were infected. Here, we investigated term placentas collected before the SARS-CoV-2 pandemic and studied the main COVID-19 receptors ACE2, TMPRSS2, as well as NRP1. We performed qPCR and immunofluorescence on cryosections in combination with markers for syncytiotrophoblast, endothelial cells, macrophages and stromal cells. The qPCR studies showed expression of both the truncated delta form of ACE2, which does not bind the COVID-19 spike protein, and the long form. The ACE2 antibody used does not distinguish between the two forms. We did not observe expression of the canonical SARS-CoV-2 entry machinery on syncytio- and cytotrophoblast. ACE2 and TMPRSS2 are co-expressed in a subpopulation of stromal cells, which in part are CD68-positive macrophages. NRP1 is localized to endothelial cells. In sum, the term placenta is not an organ that directly favors vertical transmission of COVID-19, however, microtraumas and placentitis may weaken its barrier function.',\n",
+       " 'journal': 'Cells, tissues, organs',\n",
+       " 'doi': '10.1159/000521436'}"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -622,11 +688,11 @@
       "PMID: 34915409\n",
       "PMC: None\n",
       "Retrieving pdbs from DOI...\n",
-      "Out of the 0 possible PDB IDs scraped 1 are actual PDB IDs.\n",
+      "Out of the 1 possible PDB IDs scraped 0 are actual PDB IDs.\n",
       "[]\n",
       "\n",
       "Retrieving pdbs from PMC...\n",
-      "Out of the 14 possible PDB IDs scraped 66 are actual PDB IDs.\n",
+      "Out of the 66 possible PDB IDs scraped 14 are actual PDB IDs.\n",
       "['1A14', '1A23', '1C10', '1ZM9', '2H16', '3A19', '3A79', '3D38', '4F7D', '5A39', '5C12', '5C51', '5H16', '5H21']\n",
       "\n"
      ]
